--- a/app/src/main/res/layout-land/declaration_activity.xml
+++ b/app/src/main/res/layout-land/declaration_activity.xml
@@ -135,9 +135,25 @@
                 android:layout_weight="0"
                 android:text="   Informations optionnelles :"
                 android:textStyle="bold" />
-            <LinearLayout
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_weight="1">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/phone_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="@string/t_l_phone"
+                    android:inputType="phone" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:orientation="horizontal">
 
@@ -161,22 +177,26 @@
                         android:hint="@string/destinataire"
                         android:inputType="text" />
                 </android.support.design.widget.TextInputLayout>
+
             </LinearLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1">
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:orientation="horizontal">
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/phone_input"
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:hint="@string/t_l_phone"
-                    android:inputType="phone" />
+                    android:layout_height="match_parent">
 
-            </android.support.design.widget.TextInputLayout>
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/assignee_number_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Numéro du destinataire" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
 
 
             <LinearLayout
