--- a/app/src/main/res/layout/homepage_fragment.xml
+++ b/app/src/main/res/layout/homepage_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -38,6 +37,7 @@
 
         </android.support.v7.widget.Toolbar>
 
+
     </LinearLayout>
 
     <LinearLayout
@@ -56,11 +56,8 @@
                 android:id="@+id/map"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
-                android:background="@drawable/map"
-                android:clickable="true"
-                android:focusable="true"
-                android:contentDescription="TODO" />
+                android:layout_weight="0.3"
+                app:srcCompat="@drawable/map" />
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/rechercher"
